<resources>
    <string name="app_name">ShareCalc</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">ShareCalc</string>
    <string name="nav_header_subtitle">by Team Moc</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    
    <dimen name = "textSize">30sp</dimen>
    <dimen name = "buttonSpace">0.6dp</dimen>
    <dimen name = "layout">70dp</dimen>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiplication">*</string>

	<string name="units_instruction">Select Units to Convert</string>
    <string name="input_units">Input Units</string>
    <string name="convert_button">Convert</string>
    <string-array name="unit_options">
        <item>Unit types...</item>
    	<item>Volume</item>
    	<item>Length</item>
        <item>Weight and Mass</item>
        <item>Temperature</item>
    </string-array>
    <string-array name="volume_options">
        <item>Liters</item>
        <item>Milliliters</item>
        <item>Teaspoons</item>
        <item>Tablespoons</item>
        <item>Fl Oz</item>
        <item>Cups</item>
        <item>Pints</item>
        <item>Quarts</item>
        <item>Gallons</item>
    </string-array>
    <string-array name="length_options">
        <item>Meters</item>
        <item>Micrometers</item>
        <item>Millimeters</item>
        <item>Centimeters</item>
        <item>Decimeters</item>
        <item>Decameters</item>
        <item>Kilometers</item>
        <item>Inches</item>
        <item>Feet</item>
        <item>Yards</item>
        <item>Miles</item>
        <item>Light-seconds</item>
        <item>Light-minutes</item>
        <item>Light-months</item>
        <item>Light-years</item>
    </string-array>
    <string-array name="weight_mass_options">
        <item>Kilograms</item>
        <item>Grams</item>
        <item>Milligrams</item>
        <item>Centigrams</item>
        <item>Ounces</item>
        <item>Pounds</item>
        <item>Tons</item>
    </string-array>
    <string-array name="temperature_options">
        <item>Fahrenheit</item>
        <item>Celsius</item>
        <item>Kelvin</item>
    </string-array>
    <string-array name="default_units">
        <item>Units...</item>
    </string-array>

    <string name="menu_programmer_calculator">Programmer Calculator</string>
    <string name="menu_scientific_calculator">Scientific Calculator</string>
    <string name="menu_unit_converter">Unit Converter</string>
    <string name="unit_conversion_results_title">Conversions</string>
</resources>
