<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_scientific_calculator">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.moc.sharecalc.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_programmer_calculator"
        android:name="com.moc.sharecalc.ui.programmercalculator.ProgrammerCalculatorFragment"
        android:label="@string/menu_programmer_calculator"
        tools:layout="@layout/fragment_programmer_calculator" />
    <fragment
        android:id="@+id/nav_scientific_calculator"
        android:name="com.moc.sharecalc.ui.scientificcalculator.ScientificCalculatorFragment"
        android:label="@string/menu_scientific_calculator"
        tools:layout="@layout/fragment_scientific_calculator" />
    <fragment
        android:id="@+id/nav_unit_converter"
        android:name="com.moc.sharecalc.ui.unitconverter.UnitConverterFragment"
        android:label="@string/menu_unit_converter"
        tools:layout="@layout/fragment_unit_converter" />
</navigation>